# mypalclara

./: .dockerignore  .env.docker.example  .gitignore  .gitmodules  .graph_backfill_progress.json  CLAUDE.md  Dockerfile  Dockerfile.combined  Dockerfile.discord  Dockerfile.gateway  Dockerfile.teams  Dockerfile.web  LICENSE  MYPAL_ARCHITECTURE.md  README.md  VERSION  alembic.ini  api.py  app.py  clara.yaml.example  cli_bot.py  discord_bot.py  discord_bot_v2.py  discord_clara.py  discord_crewai.py  docker-compose.combined.yml  docker-compose.yml  email_monitor.py  mem0_config.py  memory_manager.py  organic_response_system.py  package.json  proactive_engine.py  pyproject.toml  railway.toml
.githooks/: post-commit
.github/workflows/: build-base-image.yml  ci.yml  promote-to-main.yml  promote-to-prod.yml  sync-wiki.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2026.05.109-MILESTONE-AUDIT.md  v2026.05.109-REQUIREMENTS.md  v2026.05.109-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_archive/: discord_bot_legacy.py
adapters/: __init__.py  base.py  manifest.py  protocol.py
adapters/cli/: __init__.py  adapter.py  approval.py  gateway_client.py  logging.py  main.py  (+2 more)
alloy/: Dockerfile  README.md  config.alloy  railway.toml
api_service/: Dockerfile  main.py  requirements.txt
backup_service/: Dockerfile  backup.py  cli.py  config.py  config_files.py  database.py  railway.toml
clara-mcp-server/: Cargo.toml  README.md
clara-mcp-server/src/: main.rs
clara-mcp-server/src/tools/: backup.rs  claude_code.rs  discord.rs  google.rs  local_files.rs  mod.rs  ors_notes.rs  sandbox.rs
clara_core/: __init__.py  config.py  contradiction.py  emotional_context.py  intention_manager.py  intentions.py  llm.py  memory.py  memory_dynamics_manager.py  memory_manager.py  memory_retriever.py  memory_types.py  personality.py  personality_evolution.py  prompt_builder.py  session_manager.py  token_counter.py  tools.py  topic_recurrence.py
clara_service/: __init__.py
config/: __init__.py  bot.py  logging.py  mem0.py  personality.md  personality.txt  rook.py
crewai_service/: __init__.py
crews/: __init__.py
db/: __init__.py  channel_config.py  connection.py  mcp_models.py  models.py  user_identity.py
docs/: DISCORD_IMPROVEMENTS.md  MEMORY-MODEL-SPEC.md  MIGRATION-2026.05.15.md  MIGRATION_PHASE5.md  MyPalClara Architecture TDD.md  clara-crewai-spec.md  crewai-architecture.md  hostinger-deployment.md  migrating-mypalclara.md  openclaw_code_analysis.md  ors-context-sensitivity-spec.md  tool-format-standardization-plan.md
email_service/: __init__.py  credentials.py  monitor.py  presets.py  rules_engine.py
frontend/: next.config.ts
games/: Dockerfile  Gemfile  package.json  railway.toml  tsconfig.json
gateway/: __init__.py  __main__.py  adapter_manager.py  adapters.yaml  health.py  hooks.py  llm_orchestrator.py  main.py  processor.py  protocol.py  rate_limiter.py  router.py  scheduler.py  server.py  session.py  test_client.py  tool_executor.py
go/: Makefile  go.mod  go.sum  sqlc.yaml
grafana_agent/: Dockerfile  README.md  agent.yaml  config.alloy
hooks/: hooks.yaml.example
identity/: .env.railway.example  Dockerfile  app.py  config.py  db.py  oauth.py  pyproject.toml  railway.toml
identity/static/: index.html
identity/tests/: test_api.py  test_jwt.py
mcp_servers/: __init__.py
metrics_service/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
mypal_protocol/: __init__.py  messages.py  pyproject.toml
mypalclara/: __init__.py  __main__.py
otel_collector/: Dockerfile  README.md  config.yaml
personalities/: clara.md  clara.txt  clarissa.md  clarissa.txt
proactive/: engine.py  gateway_bridge.py
release_dashboard/: main.py  requirements.txt
sandbox/: __init__.py  docker.py  e2b.py  incus.py  manager.py  remote_client.py
sandbox_service/: Caddyfile  Dockerfile  Dockerfile.sandbox  README.md  __init__.py  api.py  config.py  docker-compose.yml  models.py  requirements.txt  sandbox_manager.py
scripts/: approve_user.py  backfill_episodes.py  backfill_graph_memory.py  backfill_memory_types.py  backfill_users.py  backfill_vch.py  backup_databases.py  benchmark_memory.py  bootstrap_memory.py  bump_version.py  clara_export_import.py  clear_dbs.py  dev-webui.sh  graph_viewer.py  imessage_import.py  import_discord_chats.py  init_clara_mcp.py  memory_admin_tui.py  migrate.py  migrate_cortex.py  migrate_embeddings.py  migrate_graph_embeddings.py  migrate_graph_entities.py  migrate_mem0_to_cortex.py  migrate_pgvector_to_qdrant.py  migrate_railway_dbs.py  migrate_to_postgres.py  restart_bot.py  upload_to_mem0_platform.py  validate_migration.py
src/: bootstrap_memory.py
storage/: __init__.py  local_files.py
teams_manifest/: README.txt  manifest.json
tests/: __init__.py  conftest.py  test_evaluate.py  test_graph.py  test_ruminate.py  test_sandboxing.py  test_skills.py  test_tool_permissions.py
tools/: __init__.py  _base.py  _loader.py  _registry.py  azure_devops.py  chat_history.py  claude_code.py  cli_files.py  cli_shell.py  discord_messaging.py  docker_sandbox.py  email.py  email_alerts.py  github.py  google_calendar.py  google_oauth.py  google_workspace.py  local_files.py  mcp_management.py  ors_notes.py  playwright_browser.py  system_logs.py  tool_display.json  web_search.py
web-ui/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
web_ui/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt  run.sh
wiki/: API-Service.md  Architecture.md  Backup-Service.md  CLI-Adapter.md  Configuration.md  Deployment.md  Discord-Features.md  Email-Monitoring.md  Gateway.md  Home.md  Installation.md  MCP-Plugin-System.md  Memory-System.md  Proactive-Messaging.md  Quick-Start.md  Sandbox-System.md  Teams-Adapter.md  Tool-Development.md  Troubleshooting.md  Voice-Chat.md  Web-Interface.md
(+1129 files in other folders)
