[tool.poetry]
name = "mypalclara"
version = "2026.06.110"
description = "MyPalClara - AI assistant with session management and memory"
authors = ["Joshua Heidorn <heidornj@icloud.com>"]
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.14"

# API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

# Database
sqlalchemy = "^2.0"

# Memory system - using vendored mem0 with fixes (vendor/mem0)
# Dependencies needed by the vendored mem0:
pydantic = "^2.0"  # Config validation
qdrant-client = "^1.7.0"  # Vector store for local dev
falkordb = "^1.0.0"  # Graph database (Redis-protocol, OpenCypher)
kuzu = "^0.9.0"  # Embedded graph database (optional)
rank-bm25 = "^0.2.0"  # BM25 ranking for Kuzu graph search
posthog = "^3.0.0"  # Telemetry
pytz = "^2024.1"  # Timezone handling

# PostgreSQL support
psycopg2-binary = "^2.9.9"  # PostgreSQL driver
pgvector = "^0.3.0"  # Vector support for mem0

# Caching
redis = "^5.0.0"  # Redis for memory embedding cache

# LLM backends
openai = "^1.42.0"
anthropic = "^0.75.0"  # Required by langchain-anthropic 1.0
huggingface_hub = "^0.26.0"
langchain-openai = "^0.3.0"  # LangChain ChatOpenAI for unified tool calling
langchain-anthropic = "^1.0.0"  # LangChain ChatAnthropic for native Anthropic tools

# General utils
requests = "^2.32.5"
python-dotenv = "^1.0.1"
imessage-reader = "^0.6.1"
httpx = "^0.28.0"  # Async HTTP client for web search
vaderSentiment = "^3.3.2"  # Sentiment analysis for emotional continuity
pillow = "^11.0.0"  # Image processing for vision resizing
python-docx = "^1.1.0"  # .docx text extraction
pymupdf = "^1.25.0"  # .pdf text extraction

# Discord bot
py-cord = "^2.6.1"
PyNaCl = "^1.5.0"  # Required by py-cord for voice encryption

# Voice chat (STT/TTS/VAD)
replicate = "^1.0.0"  # Replicate API for Qwen3-TTS
webrtcvad-wheels = "^2.0.14"  # Voice activity detection (fork with Python 3.13 support, fixes pkg_resources)
sounddevice = "^0.5.0"  # PortAudio bindings for local mic/speaker (CLI voice)
audioop-lts = {version = "^0.2.1", python = ">=3.13"}  # Audio resampling (audioop removed in Python 3.13+)

# Docker code execution sandbox
docker = "^7.0.0"

# S3-compatible storage (Wasabi, AWS, etc.)
boto3 = "^1.35.0"

# Tool system
watchdog = "^4.0.0"  # File watching for hot-reload

# Browser automation
playwright = "^1.49.0"

# Claude Code agent SDK
claude-agent-sdk = "^0.1.18"
imap-tools = "^1.11.0"

# MCP (Model Context Protocol) plugin system
mcp = "^1.0.0"  # Official MCP Python SDK
gitpython = "^3.1.0"  # For cloning GitHub repos
alembic = "^1.18.1"

# CLI interface
prompt_toolkit = "^3.0.52"
rich = "^14.0.0"
typer = {extras = ["all"], version = "^0.15.0"}

# Gateway
websockets = "^15.0"  # WebSocket server for gateway architecture

# Web interface
PyJWT = "^2.8.0"  # JWT tokens for web auth

# Microsoft Teams bot
botbuilder-core = "^4.16.0"
botbuilder-schema = "^4.16.0"
botbuilder-integration-aiohttp = "^4.16.0"
aiohttp = "^3.9.0"  # Required for Teams bot HTTP server
pydantic-settings = ">=2.0,<3.0"
pyyaml = ">=6.0,<7.0"

[tool.poetry.scripts]
clara-gateway = "gateway.__main__:main"
clara-discord = "adapters.discord.main:run"
clara-teams = "adapters.teams.main:run"
clara-cli = "adapters.cli.main:run"
clara-web = "mypalclara.web.__main__:main"
backup = "backup_service.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "vendor",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",   # Line too long - handled by formatter
    "E402",   # Module level import not at top of file
    "E741",   # Ambiguous variable name
    "F401",   # Imported but unused - sometimes intentional re-exports
    "F841",   # Local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tools/*.py" = ["E501"]
"sandbox/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
