[tool.poetry]
name = "mypalclara"
version = "2026.19.2"
description = "MyPalClara - AI assistant with session management and memory"
authors = ["Joshua Heidorn <heidornj@icloud.com>"]
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.14"

# API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

# Database

# Rook memory system dependencies
pydantic = "^2.0"  # Config validation

# PostgreSQL support

# Caching

# LLM backends
openai = "^1.42.0"

# General utils
python-dotenv = "^1.0.1"
httpx = "^0.28.0"  # Async HTTP client for web search
pillow = "^11.0.0"  # Image processing for vision resizing
python-docx = "^1.1.0"  # .docx document extraction
pymupdf = "^1.25.0"  # .pdf document extraction

# Discord bot
py-cord = "^2.6.1"
PyNaCl = "^1.5.0"  # Voice encryption for Discord

# Docker code execution sandbox

# S3-compatible storage (Wasabi, AWS, etc.)

# Tool system

# MCP (Model Context Protocol) - tool system migration

# Browser automation

# Claude Code agent SDK
replicate = "^1.0.0"  # TTS via Replicate (Qwen3-TTS)
webrtcvad-wheels = "^2.0.14"  # Voice Activity Detection
sounddevice = "^0.5.0"  # Audio I/O for CLI voice
audioop-lts = {version = "^0.2.1", python = ">=3.13"}  # audioop compat for Python 3.13+

# MCP (Model Context Protocol) plugin system

# Web auth
pyyaml = ">=6.0,<7.0"  # YAML parsing

# CLI interface
prompt_toolkit = "^3.0.52"
rich = "^14.0.0"

# Gateway
websockets = "^15.0"  # WebSocket server for gateway architecture

# Microsoft Teams bot
botbuilder-core = "^4.16.0"
botbuilder-schema = "^4.16.0"
botbuilder-integration-aiohttp = "^4.16.0"
aiohttp = "^3.9.0"  # Required for Teams bot HTTP server

[tool.poetry.scripts]
clara-gateway = "mypalclara.gateway.__main__:main"
clara-discord = "mypalclara.adapters.discord.main:run"
clara-teams = "mypalclara.adapters.teams.main:run"
clara-cli = "mypalclara.adapters.cli.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8"
pytest-httpx = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",   # Line too long - handled by formatter
    "E402",   # Module level import not at top of file
    "E741",   # Ambiguous variable name
    "F401",   # Imported but unused - sometimes intentional re-exports
    "F841",   # Local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mypalclara/tools/*.py" = ["E501"]
"mypalclara/sandbox/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: live-network integration tests. Deselected by default via addopts. Run with `pytest -m integration` and required env vars set.",
]
