[package]
name = "clara-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Clara's native tools as an MCP server"
license = "MIT"

[dependencies]
# MCP SDK
rmcp = { version = "0.13", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (for ORS notes)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }

# Environment
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
